donut.hackercamp.cz/src/stylesheets/admin.scss
:root {
  --md-sys-color-primary: var(--hc-link-color);
  --md-sys-color-surface: var(--hc-background-color);
  --md-icon-font: "Material Icons Outlined";
  --md-icon-color: var(--hc-text-color);
  --md-list-item-list-item-label-text-type: 400 1rem var(--hc-font-family);
  --md-text-button-label-text-type: 500 0.85rem var(--hc-font-family);
}
@media (prefers-color-scheme: dark) {
  :root {
    --md-list-item-list-item-label-text-color: var(--hc-text-color);
    --md-list-item-list-item-hover-label-text-color: var(--hc-text-color);
    --md-list-item-list-item-hover-state-layer-color: var(--hc-text-color);
    --mdc-theme-surface: var(--hc-background-color);
  }
}

a[disabled] {
  pointer-events: none;
  opacity: 0.6;
}

.hc-pagination {
  box-sizing: content-box;
  height: 32px;
  padding: 8px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.hc-pagination .hc-pagination__total {
  margin-right: 16px;
}
.hc-pagination .hc-pagination__button {
  display: inline-flex;
  height: 32px;
  text-decoration: none;
  align-items: center;
}
.hc-pagination .hc-pagination__button + .hc-pagination__button {
  margin-left: 8px;
}

.hc-dialog {
  position: relative;
  padding-top: 2rem;
}
.hc-dialog [data-action="close"] {
  position: absolute;
  right: 4px;
  top: 4px;
}

